Update examples to the latest data loader API

--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -247,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fae4c0d4b50>"
+       "<matplotlib.image.AxesImage at 0x7f8950245610>"
       ]
      },
      "execution_count": 7,
@@ -302,46 +302,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 11.242909\n",
-      "Train Epoch: 1 Batch: 100 Loss: 2.299920\n",
-      "Train Epoch: 1 Batch: 200 Loss: 2.296710\n",
-      "Train Epoch: 1 Batch: 300 Loss: 2.302565\n",
-      "Train Epoch: 1 Batch: 400 Loss: 2.294634\n",
-      "Train Epoch: 1 Batch: 500 Loss: 2.300356\n",
-      "Train Epoch: 1 Batch: 600 Loss: 2.297580\n",
-      "Train Epoch: 1 Batch: 700 Loss: 2.311521\n",
-      "Train Epoch: 1 Batch: 800 Loss: 2.303554\n",
-      "Train Epoch: 1 Batch: 900 Loss: 2.297607\n",
-      "Train Epoch: 2 Batch: 0 Loss: 2.298031\n",
-      "Train Epoch: 2 Batch: 100 Loss: 2.307404\n",
-      "Train Epoch: 2 Batch: 200 Loss: 2.307810\n",
-      "Train Epoch: 2 Batch: 300 Loss: 2.304656\n",
-      "Train Epoch: 2 Batch: 400 Loss: 2.301019\n",
-      "Train Epoch: 2 Batch: 500 Loss: 2.294436\n",
-      "Train Epoch: 2 Batch: 600 Loss: 2.300389\n",
-      "Train Epoch: 2 Batch: 700 Loss: 2.306005\n",
-      "Train Epoch: 2 Batch: 800 Loss: 2.299627\n",
-      "Train Epoch: 2 Batch: 900 Loss: 2.295405\n",
-      "Train Epoch: 3 Batch: 0 Loss: 2.300750\n",
-      "Train Epoch: 3 Batch: 100 Loss: 2.301338\n",
-      "Train Epoch: 3 Batch: 200 Loss: 2.297989\n",
-      "Train Epoch: 3 Batch: 300 Loss: 2.303969\n",
-      "Train Epoch: 3 Batch: 400 Loss: 2.294911\n",
-      "Train Epoch: 3 Batch: 500 Loss: 2.302024\n",
-      "Train Epoch: 3 Batch: 600 Loss: 2.294988\n",
-      "Train Epoch: 3 Batch: 700 Loss: 2.299950\n",
-      "Train Epoch: 3 Batch: 800 Loss: 2.308317\n",
-      "Train Epoch: 3 Batch: 900 Loss: 2.303326\n",
-      "Train Epoch: 4 Batch: 0 Loss: 2.302468\n",
-      "Train Epoch: 4 Batch: 100 Loss: 2.305082\n",
-      "Train Epoch: 4 Batch: 200 Loss: 2.298498\n",
-      "Train Epoch: 4 Batch: 300 Loss: 2.306228\n",
-      "Train Epoch: 4 Batch: 400 Loss: 2.289666\n",
-      "Train Epoch: 4 Batch: 500 Loss: 2.310665\n",
-      "Train Epoch: 4 Batch: 600 Loss: 2.312576\n",
-      "Train Epoch: 4 Batch: 700 Loss: 2.308142\n",
-      "Train Epoch: 4 Batch: 800 Loss: 2.303751\n",
-      "Train Epoch: 4 Batch: 900 Loss: 2.308917\n"
+      "Train Epoch: 1 Batch: 0 Loss: 11.764080\n",
+      "Train Epoch: 1 Batch: 100 Loss: 2.297732\n",
+      "Train Epoch: 1 Batch: 200 Loss: 2.305691\n",
+      "Train Epoch: 1 Batch: 300 Loss: 2.302776\n",
+      "Train Epoch: 1 Batch: 400 Loss: 2.302887\n",
+      "Train Epoch: 1 Batch: 500 Loss: 2.302585\n",
+      "Train Epoch: 1 Batch: 600 Loss: 2.302585\n",
+      "Train Epoch: 1 Batch: 700 Loss: 2.307095\n",
+      "Train Epoch: 1 Batch: 800 Loss: 2.302585\n",
+      "Train Epoch: 1 Batch: 900 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 0 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 100 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 200 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 300 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 400 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 500 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 600 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 700 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 800 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 900 Loss: 2.302585\n",
+      "Train Epoch: 3 Batch: 0 Loss: 2.302585\n",
+      "Train Epoch: 3 Batch: 100 Loss: 2.302585\n",
+      "Train Epoch: 3 Batch: 200 Loss: 2.302585\n",
+      "Train Epoch: 3 Batch: 300 Loss: 2.302585\n",
+      "Train Epoch: 3 Batch: 400 Loss: 2.302585\n",
+      "Train Epoch: 3 Batch: 500 Loss: 2.302585\n",
+      "Train Epoch: 3 Batch: 600 Loss: 2.302585\n",
+      "Train Epoch: 3 Batch: 700 Loss: 2.302585\n",
+      "Train Epoch: 3 Batch: 800 Loss: 2.302585\n",
+      "Train Epoch: 3 Batch: 900 Loss: 2.302585\n",
+      "Train Epoch: 4 Batch: 0 Loss: 2.302585\n",
+      "Train Epoch: 4 Batch: 100 Loss: 2.302585\n",
+      "Train Epoch: 4 Batch: 200 Loss: 2.302585\n",
+      "Train Epoch: 4 Batch: 300 Loss: 2.302585\n",
+      "Train Epoch: 4 Batch: 400 Loss: 2.302585\n",
+      "Train Epoch: 4 Batch: 500 Loss: 2.302585\n",
+      "Train Epoch: 4 Batch: 600 Loss: 2.302585\n",
+      "Train Epoch: 4 Batch: 700 Loss: 2.302585\n",
+      "Train Epoch: 4 Batch: 800 Loss: 2.302585\n",
+      "Train Epoch: 4 Batch: 900 Loss: 2.302585\n"
      ]
     }
    ],
@@ -373,9 +373,8 @@
     "    tiledb_dataset = PyTorchTileDBDataset(x_array=x,\n",
     "                                          y_array=y,\n",
     "                                          batch_size=64,\n",
-    "                                          buffer_size=300*64,\n",
-    "                                          batch_shuffle=True,\n",
-    "                                          within_batch_shuffle=True)\n",
+    "                                          buffer_bytes=1024**2,\n",
+    "                                          shuffle=True)\n",
     "    train_loader = torch.utils.data.DataLoader(tiledb_dataset, batch_size=None)\n",
     "\n",
     "    net = Net(shape=(28, 28))\n",
