--- a/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
@@ -706,34 +706,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 12.138733\n",
-      "Train Epoch: 1 Batch: 500 Loss: 1.475757\n",
-      "Train Epoch: 1 Batch: 1000 Loss: 0.880169\n",
-      "Train Epoch: 1 Batch: 1500 Loss: 1.017509\n",
-      "Train Epoch: 1 Batch: 2000 Loss: 1.536595\n",
-      "Train Epoch: 1 Batch: 2500 Loss: 1.288626\n",
-      "Train Epoch: 1 Batch: 3000 Loss: 1.518666\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.388500\n",
-      "Train Epoch: 2 Batch: 500 Loss: 1.087078\n",
-      "Train Epoch: 2 Batch: 1000 Loss: 0.796273\n",
-      "Train Epoch: 2 Batch: 1500 Loss: 0.950616\n",
-      "Train Epoch: 2 Batch: 2000 Loss: 1.347857\n",
-      "Train Epoch: 2 Batch: 2500 Loss: 1.210666\n",
-      "Train Epoch: 2 Batch: 3000 Loss: 1.466557\n",
-      "Train Epoch: 3 Batch: 0 Loss: 1.311854\n",
-      "Train Epoch: 3 Batch: 500 Loss: 0.967449\n",
-      "Train Epoch: 3 Batch: 1000 Loss: 0.751571\n",
-      "Train Epoch: 3 Batch: 1500 Loss: 0.912797\n",
-      "Train Epoch: 3 Batch: 2000 Loss: 1.256980\n",
-      "Train Epoch: 3 Batch: 2500 Loss: 1.156714\n",
-      "Train Epoch: 3 Batch: 3000 Loss: 1.430733\n",
-      "Train Epoch: 4 Batch: 0 Loss: 1.267748\n",
-      "Train Epoch: 4 Batch: 500 Loss: 0.918024\n",
-      "Train Epoch: 4 Batch: 1000 Loss: 0.724201\n",
-      "Train Epoch: 4 Batch: 1500 Loss: 0.891334\n",
-      "Train Epoch: 4 Batch: 2000 Loss: 1.206355\n",
-      "Train Epoch: 4 Batch: 2500 Loss: 1.115280\n",
-      "Train Epoch: 4 Batch: 3000 Loss: 1.403831\n"
+      "Train Epoch: 1 Batch: 0 Loss: 12.007089\n",
+      "Train Epoch: 1 Batch: 500 Loss: 1.454456\n",
+      "Train Epoch: 1 Batch: 1000 Loss: 0.875257\n",
+      "Train Epoch: 1 Batch: 1500 Loss: 1.022974\n",
+      "Train Epoch: 1 Batch: 2000 Loss: 1.539432\n",
+      "Train Epoch: 1 Batch: 2500 Loss: 1.278122\n",
+      "Train Epoch: 1 Batch: 3000 Loss: 1.505070\n",
+      "Train Epoch: 2 Batch: 0 Loss: 1.394117\n",
+      "Train Epoch: 2 Batch: 500 Loss: 1.075011\n",
+      "Train Epoch: 2 Batch: 1000 Loss: 0.791513\n",
+      "Train Epoch: 2 Batch: 1500 Loss: 0.955410\n",
+      "Train Epoch: 2 Batch: 2000 Loss: 1.348790\n",
+      "Train Epoch: 2 Batch: 2500 Loss: 1.201470\n",
+      "Train Epoch: 2 Batch: 3000 Loss: 1.455317\n",
+      "Train Epoch: 3 Batch: 0 Loss: 1.316742\n",
+      "Train Epoch: 3 Batch: 500 Loss: 0.958343\n",
+      "Train Epoch: 3 Batch: 1000 Loss: 0.747085\n",
+      "Train Epoch: 3 Batch: 1500 Loss: 0.916989\n",
+      "Train Epoch: 3 Batch: 2000 Loss: 1.257426\n",
+      "Train Epoch: 3 Batch: 2500 Loss: 1.148602\n",
+      "Train Epoch: 3 Batch: 3000 Loss: 1.421493\n",
+      "Train Epoch: 4 Batch: 0 Loss: 1.272265\n",
+      "Train Epoch: 4 Batch: 500 Loss: 0.910227\n",
+      "Train Epoch: 4 Batch: 1000 Loss: 0.719977\n",
+      "Train Epoch: 4 Batch: 1500 Loss: 0.895030\n",
+      "Train Epoch: 4 Batch: 2000 Loss: 1.206860\n",
+      "Train Epoch: 4 Batch: 2500 Loss: 1.108015\n",
+      "Train Epoch: 4 Batch: 3000 Loss: 1.396214\n"
      ]
     }
    ],
@@ -741,7 +741,7 @@
     "from tiledb.ml.readers.pytorch import PyTorchTileDBDataset\n",
     "\n",
     "with tiledb.open(training_images) as x, tiledb.open(training_labels) as y:\n",
-    "    tiledb_dataset = PyTorchTileDBDataset(x_array=x, y_array=y, batch_size=32, buffer_size=64)\n",
+    "    tiledb_dataset = PyTorchTileDBDataset(x_array=x, y_array=y, batch_size=32, buffer_bytes=1024**2)\n",
     "    train_loader = torch.utils.data.DataLoader(tiledb_dataset, batch_size=None)\n",
     "\n",
     "    #Number of ratings x (user + movies)\n",
