--- a/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
@@ -681,9 +681,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3125/3125 [==============================] - 22s 7ms/step - loss: 0.0000e+00 - accuracy: 0.0607\n",
+      "3125/3125 [==============================] - 7s 2ms/step - loss: 0.0000e+00 - accuracy: 0.0607\n",
       "Epoch 2/2\n",
-      "3125/3125 [==============================] - 23s 7ms/step - loss: 0.0000e+00 - accuracy: 0.0611\n"
+      "3125/3125 [==============================] - 7s 2ms/step - loss: 0.0000e+00 - accuracy: 0.0611\n"
      ]
     }
    ],
@@ -692,7 +692,7 @@
     "\n",
     "with tiledb.open(training_images) as x, tiledb.open(training_labels) as y:\n",
     "    tiledb_dataset = TensorflowTileDBDataset(x_array=x, y_array=y, x_attrs=['features'],\n",
-    "                                             y_attrs=['features'], batch_size=32, buffer_size=64)\n",
+    "                                             y_attrs=['features'], batch_size=32, buffer_bytes=1024**2)\n",
     "    model = design_model(input_shape=user_movie.shape[1])\n",
     "    model.fit(tiledb_dataset, epochs=2, batch_size=32)"
    ]
