--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -231,7 +231,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f404439f8d0>"
+       "<matplotlib.image.AxesImage at 0x7ff33b45f090>"
       ]
      },
      "execution_count": 6,
@@ -322,15 +322,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "938/938 [==============================] - 3s 2ms/step - loss: 0.3489 - accuracy: 0.8989\n",
+      "938/938 [==============================] - 5s 5ms/step - loss: 0.3535 - accuracy: 0.8988\n",
       "Epoch 2/5\n",
-      "938/938 [==============================] - 3s 2ms/step - loss: 0.1660 - accuracy: 0.9517\n",
+      "938/938 [==============================] - 5s 5ms/step - loss: 0.1713 - accuracy: 0.9501\n",
       "Epoch 3/5\n",
-      "938/938 [==============================] - 3s 3ms/step - loss: 0.1263 - accuracy: 0.9625\n",
+      "938/938 [==============================] - 5s 5ms/step - loss: 0.1275 - accuracy: 0.9619\n",
       "Epoch 4/5\n",
-      "938/938 [==============================] - 3s 2ms/step - loss: 0.1012 - accuracy: 0.9704\n",
+      "938/938 [==============================] - 5s 5ms/step - loss: 0.1033 - accuracy: 0.9691\n",
       "Epoch 5/5\n",
-      "938/938 [==============================] - 3s 3ms/step - loss: 0.0881 - accuracy: 0.9736\n"
+      "938/938 [==============================] - 5s 5ms/step - loss: 0.0883 - accuracy: 0.9729\n"
      ]
     }
    ],
@@ -339,10 +339,9 @@
     "\n",
     "with tiledb.open(training_images) as x, tiledb.open(training_labels) as y:\n",
     "    tiledb_dataset = TensorflowTileDBDataset(\n",
-    "        x_array=x, y_array=y, x_attrs=['features'], y_attrs=['features'], batch_size=64,\n",
-    "        buffer_size = 300*64, batch_shuffle=True, within_batch_shuffle=False,\n",
+    "        x_array=x, y_array=y, x_attrs=['features'], y_attrs=['features'], \n",
+    "        batch_size=64, buffer_bytes=1024**2, shuffle=True\n",
     "    )\n",
-    "\n",
     "    model.fit(tiledb_dataset, epochs=5)"
    ]
   },
