Add PyTorchTileDBDataLoader extending torch.utils.data.DataLoader

--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -247,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f8950245610>"
+       "<matplotlib.image.AxesImage at 0x7f3345bafc10>"
       ]
      },
      "execution_count": 7,
@@ -285,8 +285,7 @@
     }
    },
    "source": [
-    "Let's move on and create a TileDB dataset that can be used with PyTorch Dataloader API for training a machine learning\n",
-    "model."
+    "Let's move on and create a TileDB loader that extends the PyTorch DataLoader API for training a machine learning model."
    ]
   },
   {
@@ -302,46 +301,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 11.764080\n",
-      "Train Epoch: 1 Batch: 100 Loss: 2.297732\n",
-      "Train Epoch: 1 Batch: 200 Loss: 2.305691\n",
-      "Train Epoch: 1 Batch: 300 Loss: 2.302776\n",
-      "Train Epoch: 1 Batch: 400 Loss: 2.302887\n",
-      "Train Epoch: 1 Batch: 500 Loss: 2.302585\n",
-      "Train Epoch: 1 Batch: 600 Loss: 2.302585\n",
-      "Train Epoch: 1 Batch: 700 Loss: 2.307095\n",
-      "Train Epoch: 1 Batch: 800 Loss: 2.302585\n",
-      "Train Epoch: 1 Batch: 900 Loss: 2.302585\n",
-      "Train Epoch: 2 Batch: 0 Loss: 2.302585\n",
-      "Train Epoch: 2 Batch: 100 Loss: 2.302585\n",
-      "Train Epoch: 2 Batch: 200 Loss: 2.302585\n",
-      "Train Epoch: 2 Batch: 300 Loss: 2.302585\n",
-      "Train Epoch: 2 Batch: 400 Loss: 2.302585\n",
-      "Train Epoch: 2 Batch: 500 Loss: 2.302585\n",
-      "Train Epoch: 2 Batch: 600 Loss: 2.302585\n",
-      "Train Epoch: 2 Batch: 700 Loss: 2.302585\n",
-      "Train Epoch: 2 Batch: 800 Loss: 2.302585\n",
-      "Train Epoch: 2 Batch: 900 Loss: 2.302585\n",
-      "Train Epoch: 3 Batch: 0 Loss: 2.302585\n",
-      "Train Epoch: 3 Batch: 100 Loss: 2.302585\n",
-      "Train Epoch: 3 Batch: 200 Loss: 2.302585\n",
-      "Train Epoch: 3 Batch: 300 Loss: 2.302585\n",
-      "Train Epoch: 3 Batch: 400 Loss: 2.302585\n",
-      "Train Epoch: 3 Batch: 500 Loss: 2.302585\n",
-      "Train Epoch: 3 Batch: 600 Loss: 2.302585\n",
-      "Train Epoch: 3 Batch: 700 Loss: 2.302585\n",
-      "Train Epoch: 3 Batch: 800 Loss: 2.302585\n",
-      "Train Epoch: 3 Batch: 900 Loss: 2.302585\n",
-      "Train Epoch: 4 Batch: 0 Loss: 2.302585\n",
-      "Train Epoch: 4 Batch: 100 Loss: 2.302585\n",
-      "Train Epoch: 4 Batch: 200 Loss: 2.302585\n",
-      "Train Epoch: 4 Batch: 300 Loss: 2.302585\n",
-      "Train Epoch: 4 Batch: 400 Loss: 2.302585\n",
-      "Train Epoch: 4 Batch: 500 Loss: 2.302585\n",
-      "Train Epoch: 4 Batch: 600 Loss: 2.302585\n",
-      "Train Epoch: 4 Batch: 700 Loss: 2.302585\n",
-      "Train Epoch: 4 Batch: 800 Loss: 2.302585\n",
-      "Train Epoch: 4 Batch: 900 Loss: 2.302585\n"
+      "Train Epoch: 1 Batch: 0 Loss: 5.869312\n",
+      "Train Epoch: 1 Batch: 100 Loss: 2.303009\n",
+      "Train Epoch: 1 Batch: 200 Loss: 2.305121\n",
+      "Train Epoch: 1 Batch: 300 Loss: 2.309706\n",
+      "Train Epoch: 1 Batch: 400 Loss: 2.297852\n",
+      "Train Epoch: 1 Batch: 500 Loss: 2.305581\n",
+      "Train Epoch: 1 Batch: 600 Loss: 2.302891\n",
+      "Train Epoch: 1 Batch: 700 Loss: 2.301756\n",
+      "Train Epoch: 1 Batch: 800 Loss: 2.303066\n",
+      "Train Epoch: 1 Batch: 900 Loss: 2.298511\n",
+      "Train Epoch: 2 Batch: 0 Loss: 2.305076\n",
+      "Train Epoch: 2 Batch: 100 Loss: 2.299398\n",
+      "Train Epoch: 2 Batch: 200 Loss: 2.300029\n",
+      "Train Epoch: 2 Batch: 300 Loss: 2.302203\n",
+      "Train Epoch: 2 Batch: 400 Loss: 2.304207\n",
+      "Train Epoch: 2 Batch: 500 Loss: 2.302763\n",
+      "Train Epoch: 2 Batch: 600 Loss: 2.304435\n",
+      "Train Epoch: 2 Batch: 700 Loss: 2.299078\n",
+      "Train Epoch: 2 Batch: 800 Loss: 2.299224\n",
+      "Train Epoch: 2 Batch: 900 Loss: 2.297202\n",
+      "Train Epoch: 3 Batch: 0 Loss: 2.303448\n",
+      "Train Epoch: 3 Batch: 100 Loss: 2.307392\n",
+      "Train Epoch: 3 Batch: 200 Loss: 2.299678\n",
+      "Train Epoch: 3 Batch: 300 Loss: 2.302885\n",
+      "Train Epoch: 3 Batch: 400 Loss: 2.304460\n",
+      "Train Epoch: 3 Batch: 500 Loss: 2.304093\n",
+      "Train Epoch: 3 Batch: 600 Loss: 2.305850\n",
+      "Train Epoch: 3 Batch: 700 Loss: 2.301177\n",
+      "Train Epoch: 3 Batch: 800 Loss: 2.303174\n",
+      "Train Epoch: 3 Batch: 900 Loss: 2.304935\n",
+      "Train Epoch: 4 Batch: 0 Loss: 2.303794\n",
+      "Train Epoch: 4 Batch: 100 Loss: 2.304928\n",
+      "Train Epoch: 4 Batch: 200 Loss: 2.303550\n",
+      "Train Epoch: 4 Batch: 300 Loss: 2.302531\n",
+      "Train Epoch: 4 Batch: 400 Loss: 2.300663\n",
+      "Train Epoch: 4 Batch: 500 Loss: 2.303282\n",
+      "Train Epoch: 4 Batch: 600 Loss: 2.304961\n",
+      "Train Epoch: 4 Batch: 700 Loss: 2.301779\n",
+      "Train Epoch: 4 Batch: 800 Loss: 2.303534\n",
+      "Train Epoch: 4 Batch: 900 Loss: 2.298572\n"
      ]
     }
    ],
@@ -349,7 +348,7 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
-    "from tiledb.ml.readers.pytorch import PyTorchTileDBDataset\n",
+    "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader\n",
     "\n",
     "class Net(nn.Module):\n",
     "    def __init__(self, shape):\n",
@@ -370,13 +369,10 @@
     "        return logits\n",
     "\n",
     "with tiledb.open(training_images) as x, tiledb.open(training_labels) as y:\n",
-    "    tiledb_dataset = PyTorchTileDBDataset(x_array=x,\n",
-    "                                          y_array=y,\n",
-    "                                          batch_size=64,\n",
-    "                                          buffer_bytes=1024**2,\n",
-    "                                          shuffle=True)\n",
-    "    train_loader = torch.utils.data.DataLoader(tiledb_dataset, batch_size=None)\n",
-    "\n",
+    "    train_loader = PyTorchTileDBDataLoader(x_array=x, y_array=y,\n",
+    "                                           batch_size=64,\n",
+    "                                           buffer_bytes=1024**2,\n",
+    "                                           shuffle=True)\n",
     "    net = Net(shape=(28, 28))\n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "    optimizer = optim.SGD(net.parameters(), lr=0.01, momentum=0.5)\n",
