--- a/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
@@ -706,43 +706,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 12.007089\n",
-      "Train Epoch: 1 Batch: 500 Loss: 1.454456\n",
-      "Train Epoch: 1 Batch: 1000 Loss: 0.875257\n",
-      "Train Epoch: 1 Batch: 1500 Loss: 1.022974\n",
-      "Train Epoch: 1 Batch: 2000 Loss: 1.539432\n",
-      "Train Epoch: 1 Batch: 2500 Loss: 1.278122\n",
-      "Train Epoch: 1 Batch: 3000 Loss: 1.505070\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.394117\n",
-      "Train Epoch: 2 Batch: 500 Loss: 1.075011\n",
-      "Train Epoch: 2 Batch: 1000 Loss: 0.791513\n",
-      "Train Epoch: 2 Batch: 1500 Loss: 0.955410\n",
-      "Train Epoch: 2 Batch: 2000 Loss: 1.348790\n",
-      "Train Epoch: 2 Batch: 2500 Loss: 1.201470\n",
-      "Train Epoch: 2 Batch: 3000 Loss: 1.455317\n",
-      "Train Epoch: 3 Batch: 0 Loss: 1.316742\n",
-      "Train Epoch: 3 Batch: 500 Loss: 0.958343\n",
-      "Train Epoch: 3 Batch: 1000 Loss: 0.747085\n",
-      "Train Epoch: 3 Batch: 1500 Loss: 0.916989\n",
-      "Train Epoch: 3 Batch: 2000 Loss: 1.257426\n",
-      "Train Epoch: 3 Batch: 2500 Loss: 1.148602\n",
-      "Train Epoch: 3 Batch: 3000 Loss: 1.421493\n",
-      "Train Epoch: 4 Batch: 0 Loss: 1.272265\n",
-      "Train Epoch: 4 Batch: 500 Loss: 0.910227\n",
-      "Train Epoch: 4 Batch: 1000 Loss: 0.719977\n",
-      "Train Epoch: 4 Batch: 1500 Loss: 0.895030\n",
-      "Train Epoch: 4 Batch: 2000 Loss: 1.206860\n",
-      "Train Epoch: 4 Batch: 2500 Loss: 1.108015\n",
-      "Train Epoch: 4 Batch: 3000 Loss: 1.396214\n"
+      "Train Epoch: 1 Batch: 0 Loss: 12.139249\n",
+      "Train Epoch: 1 Batch: 500 Loss: 1.468674\n",
+      "Train Epoch: 1 Batch: 1000 Loss: 0.882950\n",
+      "Train Epoch: 1 Batch: 1500 Loss: 1.023839\n",
+      "Train Epoch: 1 Batch: 2000 Loss: 1.543871\n",
+      "Train Epoch: 1 Batch: 2500 Loss: 1.290439\n",
+      "Train Epoch: 1 Batch: 3000 Loss: 1.506236\n",
+      "Train Epoch: 2 Batch: 0 Loss: 1.389335\n",
+      "Train Epoch: 2 Batch: 500 Loss: 1.082205\n",
+      "Train Epoch: 2 Batch: 1000 Loss: 0.798071\n",
+      "Train Epoch: 2 Batch: 1500 Loss: 0.955106\n",
+      "Train Epoch: 2 Batch: 2000 Loss: 1.354398\n",
+      "Train Epoch: 2 Batch: 2500 Loss: 1.213296\n",
+      "Train Epoch: 2 Batch: 3000 Loss: 1.455007\n",
+      "Train Epoch: 3 Batch: 0 Loss: 1.311080\n",
+      "Train Epoch: 3 Batch: 500 Loss: 0.963807\n",
+      "Train Epoch: 3 Batch: 1000 Loss: 0.752557\n",
+      "Train Epoch: 3 Batch: 1500 Loss: 0.916212\n",
+      "Train Epoch: 3 Batch: 2000 Loss: 1.262968\n",
+      "Train Epoch: 3 Batch: 2500 Loss: 1.159866\n",
+      "Train Epoch: 3 Batch: 3000 Loss: 1.420085\n",
+      "Train Epoch: 4 Batch: 0 Loss: 1.266083\n",
+      "Train Epoch: 4 Batch: 500 Loss: 0.915137\n",
+      "Train Epoch: 4 Batch: 1000 Loss: 0.724586\n",
+      "Train Epoch: 4 Batch: 1500 Loss: 0.894152\n",
+      "Train Epoch: 4 Batch: 2000 Loss: 1.211881\n",
+      "Train Epoch: 4 Batch: 2500 Loss: 1.118724\n",
+      "Train Epoch: 4 Batch: 3000 Loss: 1.394083\n"
      ]
     }
    ],
    "source": [
-    "from tiledb.ml.readers.pytorch import PyTorchTileDBDataset\n",
+    "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader\n",
     "\n",
     "with tiledb.open(training_images) as x, tiledb.open(training_labels) as y:\n",
-    "    tiledb_dataset = PyTorchTileDBDataset(x_array=x, y_array=y, batch_size=32, buffer_bytes=1024**2)\n",
-    "    train_loader = torch.utils.data.DataLoader(tiledb_dataset, batch_size=None)\n",
+    "    train_loader = PyTorchTileDBDataLoader(x_array=x, y_array=y, batch_size=32, buffer_bytes=1024**2)\n",
     "\n",
     "    #Number of ratings x (user + movies)\n",
     "    datashape_x = (100000, 2625)\n",
