Replace shuffle parameter with shuffle_buffer_size (unused)

--- a/examples/cloud/models/pytorch_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/models/pytorch_tiledb_cloud_ml_model_array.ipynb
@@ -32,7 +32,6 @@
     "\n",
     "epochs = 1\n",
     "batch_size_train = 128\n",
-    "batch_size_test = 1000\n",
     "learning_rate = 0.01\n",
     "momentum = 0.5\n",
     "log_interval = 10\n",
@@ -119,7 +118,7 @@
     "                               torchvision.transforms.Normalize(\n",
     "                                 (0.1307,), (0.3081,))\n",
     "                             ])),\n",
-    "  batch_size=batch_size_train, shuffle=True)"
+    "  batch_size=batch_size_train, shuffle_buffer_size=2*batch_size_train)"
    ]
   },
   {
