--- a/examples/models/pytorch_tiledb_models_example.ipynb
+++ b/examples/models/pytorch_tiledb_models_example.ipynb
@@ -67,7 +67,6 @@
    "source": [
     "epochs = 1\n",
     "batch_size_train = 128\n",
-    "batch_size_test = 1000\n",
     "learning_rate = 0.01\n",
     "momentum = 0.5\n",
     "log_interval = 10\n",
@@ -108,7 +107,7 @@
     "                               torchvision.transforms.Normalize(\n",
     "                                 (0.1307,), (0.3081,))\n",
     "                             ])),\n",
-    "  batch_size=batch_size_train, shuffle=True)\n"
+    "  batch_size=batch_size_train, shuffle_buffer_size=2*batch_size_train)\n"
    ]
   },
   {
