--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -372,7 +372,7 @@
     "    train_loader = PyTorchTileDBDataLoader(x_array=x, y_array=y,\n",
     "                                           batch_size=64,\n",
     "                                           buffer_bytes=1024**2,\n",
-    "                                           shuffle=True)\n",
+    "                                           shuffle_buffer_size=128)\n",
     "    net = Net(shape=(28, 28))\n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "    optimizer = optim.SGD(net.parameters(), lr=0.01, momentum=0.5)\n",
