--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -340,7 +340,7 @@
     "with tiledb.open(training_images) as x, tiledb.open(training_labels) as y:\n",
     "    tiledb_dataset = TensorflowTileDBDataset(\n",
     "        x_array=x, y_array=y, x_attrs=['features'], y_attrs=['features'], \n",
-    "        batch_size=64, buffer_bytes=1024**2, shuffle=True\n",
+    "        batch_size=64, buffer_bytes=1024**2, shuffle_buffer_size=128\n",
     "    )\n",
     "    model.fit(tiledb_dataset, epochs=5)"
    ]
