Remove buffer_bytes parameter

--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -185,9 +185,9 @@
      "text": [
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 59999), tile='64', dtype='int32'),\n",
-      "    Dim(name='dim_1', domain=(0, 27), tile='28', dtype='int32'),\n",
-      "    Dim(name='dim_2', domain=(0, 27), tile='28', dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 59999), tile=64, dtype='int32'),\n",
+      "    Dim(name='dim_1', domain=(0, 27), tile=28, dtype='int32'),\n",
+      "    Dim(name='dim_2', domain=(0, 27), tile=28, dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='uint8', var=False, nullable=False),\n",
@@ -200,7 +200,7 @@
       "\n",
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 59999), tile='64', dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 59999), tile=64, dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='uint8', var=False, nullable=False),\n",
@@ -247,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f3345bafc10>"
+       "<matplotlib.image.AxesImage at 0x7fa01c5df3d0>"
       ]
      },
      "execution_count": 7,
@@ -301,46 +301,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 5.869312\n",
-      "Train Epoch: 1 Batch: 100 Loss: 2.303009\n",
-      "Train Epoch: 1 Batch: 200 Loss: 2.305121\n",
-      "Train Epoch: 1 Batch: 300 Loss: 2.309706\n",
-      "Train Epoch: 1 Batch: 400 Loss: 2.297852\n",
-      "Train Epoch: 1 Batch: 500 Loss: 2.305581\n",
-      "Train Epoch: 1 Batch: 600 Loss: 2.302891\n",
-      "Train Epoch: 1 Batch: 700 Loss: 2.301756\n",
-      "Train Epoch: 1 Batch: 800 Loss: 2.303066\n",
-      "Train Epoch: 1 Batch: 900 Loss: 2.298511\n",
-      "Train Epoch: 2 Batch: 0 Loss: 2.305076\n",
-      "Train Epoch: 2 Batch: 100 Loss: 2.299398\n",
-      "Train Epoch: 2 Batch: 200 Loss: 2.300029\n",
-      "Train Epoch: 2 Batch: 300 Loss: 2.302203\n",
-      "Train Epoch: 2 Batch: 400 Loss: 2.304207\n",
-      "Train Epoch: 2 Batch: 500 Loss: 2.302763\n",
-      "Train Epoch: 2 Batch: 600 Loss: 2.304435\n",
-      "Train Epoch: 2 Batch: 700 Loss: 2.299078\n",
-      "Train Epoch: 2 Batch: 800 Loss: 2.299224\n",
-      "Train Epoch: 2 Batch: 900 Loss: 2.297202\n",
-      "Train Epoch: 3 Batch: 0 Loss: 2.303448\n",
-      "Train Epoch: 3 Batch: 100 Loss: 2.307392\n",
-      "Train Epoch: 3 Batch: 200 Loss: 2.299678\n",
-      "Train Epoch: 3 Batch: 300 Loss: 2.302885\n",
-      "Train Epoch: 3 Batch: 400 Loss: 2.304460\n",
-      "Train Epoch: 3 Batch: 500 Loss: 2.304093\n",
-      "Train Epoch: 3 Batch: 600 Loss: 2.305850\n",
-      "Train Epoch: 3 Batch: 700 Loss: 2.301177\n",
-      "Train Epoch: 3 Batch: 800 Loss: 2.303174\n",
-      "Train Epoch: 3 Batch: 900 Loss: 2.304935\n",
-      "Train Epoch: 4 Batch: 0 Loss: 2.303794\n",
-      "Train Epoch: 4 Batch: 100 Loss: 2.304928\n",
-      "Train Epoch: 4 Batch: 200 Loss: 2.303550\n",
-      "Train Epoch: 4 Batch: 300 Loss: 2.302531\n",
-      "Train Epoch: 4 Batch: 400 Loss: 2.300663\n",
-      "Train Epoch: 4 Batch: 500 Loss: 2.303282\n",
-      "Train Epoch: 4 Batch: 600 Loss: 2.304961\n",
-      "Train Epoch: 4 Batch: 700 Loss: 2.301779\n",
-      "Train Epoch: 4 Batch: 800 Loss: 2.303534\n",
-      "Train Epoch: 4 Batch: 900 Loss: 2.298572\n"
+      "Train Epoch: 1 Batch: 0 Loss: 11.601232\n",
+      "Train Epoch: 1 Batch: 100 Loss: 2.299971\n",
+      "Train Epoch: 1 Batch: 200 Loss: 2.305299\n",
+      "Train Epoch: 1 Batch: 300 Loss: 2.306848\n",
+      "Train Epoch: 1 Batch: 400 Loss: 2.298717\n",
+      "Train Epoch: 1 Batch: 500 Loss: 2.304001\n",
+      "Train Epoch: 1 Batch: 600 Loss: 2.300277\n",
+      "Train Epoch: 1 Batch: 700 Loss: 2.302148\n",
+      "Train Epoch: 1 Batch: 800 Loss: 2.298393\n",
+      "Train Epoch: 1 Batch: 900 Loss: 2.305512\n",
+      "Train Epoch: 2 Batch: 0 Loss: 2.300442\n",
+      "Train Epoch: 2 Batch: 100 Loss: 2.298626\n",
+      "Train Epoch: 2 Batch: 200 Loss: 2.296597\n",
+      "Train Epoch: 2 Batch: 300 Loss: 2.310375\n",
+      "Train Epoch: 2 Batch: 400 Loss: 2.300082\n",
+      "Train Epoch: 2 Batch: 500 Loss: 2.300019\n",
+      "Train Epoch: 2 Batch: 600 Loss: 2.302168\n",
+      "Train Epoch: 2 Batch: 700 Loss: 2.304370\n",
+      "Train Epoch: 2 Batch: 800 Loss: 2.306222\n",
+      "Train Epoch: 2 Batch: 900 Loss: 2.300331\n",
+      "Train Epoch: 3 Batch: 0 Loss: 2.303886\n",
+      "Train Epoch: 3 Batch: 100 Loss: 2.300312\n",
+      "Train Epoch: 3 Batch: 200 Loss: 2.296428\n",
+      "Train Epoch: 3 Batch: 300 Loss: 2.300074\n",
+      "Train Epoch: 3 Batch: 400 Loss: 2.308609\n",
+      "Train Epoch: 3 Batch: 500 Loss: 2.299995\n",
+      "Train Epoch: 3 Batch: 600 Loss: 2.285456\n",
+      "Train Epoch: 3 Batch: 700 Loss: 2.306601\n",
+      "Train Epoch: 3 Batch: 800 Loss: 2.310430\n",
+      "Train Epoch: 3 Batch: 900 Loss: 2.300303\n",
+      "Train Epoch: 4 Batch: 0 Loss: 2.298571\n",
+      "Train Epoch: 4 Batch: 100 Loss: 2.305758\n",
+      "Train Epoch: 4 Batch: 200 Loss: 2.304029\n",
+      "Train Epoch: 4 Batch: 300 Loss: 2.302169\n",
+      "Train Epoch: 4 Batch: 400 Loss: 2.297935\n",
+      "Train Epoch: 4 Batch: 500 Loss: 2.304413\n",
+      "Train Epoch: 4 Batch: 600 Loss: 2.283368\n",
+      "Train Epoch: 4 Batch: 700 Loss: 2.306608\n",
+      "Train Epoch: 4 Batch: 800 Loss: 2.304200\n",
+      "Train Epoch: 4 Batch: 900 Loss: 2.296696\n"
      ]
     }
    ],
@@ -368,10 +368,10 @@
     "        logits = self.linear_relu_stack(x)\n",
     "        return logits\n",
     "\n",
-    "with tiledb.open(training_images) as x, tiledb.open(training_labels) as y:\n",
+    "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2})\n",
+    "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    train_loader = PyTorchTileDBDataLoader(x_array=x, y_array=y,\n",
     "                                           batch_size=64,\n",
-    "                                           buffer_bytes=1024**2,\n",
     "                                           shuffle_buffer_size=128)\n",
     "    net = Net(shape=(28, 28))\n",
     "    criterion = nn.CrossEntropyLoss()\n",
