--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -172,9 +172,9 @@
      "text": [
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 59999), tile='64', dtype='int32'),\n",
-      "    Dim(name='dim_1', domain=(0, 27), tile='28', dtype='int32'),\n",
-      "    Dim(name='dim_2', domain=(0, 27), tile='28', dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 59999), tile=64, dtype='int32'),\n",
+      "    Dim(name='dim_1', domain=(0, 27), tile=28, dtype='int32'),\n",
+      "    Dim(name='dim_2', domain=(0, 27), tile=28, dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='float64', var=False, nullable=False),\n",
@@ -187,7 +187,7 @@
       "\n",
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 59999), tile='64', dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 59999), tile=64, dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='uint8', var=False, nullable=False),\n",
@@ -231,7 +231,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff33b45f090>"
+       "<matplotlib.image.AxesImage at 0x7f3980abd290>"
       ]
      },
      "execution_count": 6,
@@ -322,25 +322,26 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "938/938 [==============================] - 5s 5ms/step - loss: 0.3535 - accuracy: 0.8988\n",
+      "938/938 [==============================] - 4s 4ms/step - loss: 0.3442 - accuracy: 0.9021\n",
       "Epoch 2/5\n",
-      "938/938 [==============================] - 5s 5ms/step - loss: 0.1713 - accuracy: 0.9501\n",
+      "938/938 [==============================] - 4s 4ms/step - loss: 0.1690 - accuracy: 0.9502\n",
       "Epoch 3/5\n",
-      "938/938 [==============================] - 5s 5ms/step - loss: 0.1275 - accuracy: 0.9619\n",
+      "938/938 [==============================] - 4s 4ms/step - loss: 0.1282 - accuracy: 0.9618\n",
       "Epoch 4/5\n",
-      "938/938 [==============================] - 5s 5ms/step - loss: 0.1033 - accuracy: 0.9691\n",
+      "938/938 [==============================] - 4s 4ms/step - loss: 0.1023 - accuracy: 0.9699\n",
       "Epoch 5/5\n",
-      "938/938 [==============================] - 5s 5ms/step - loss: 0.0883 - accuracy: 0.9729\n"
+      "938/938 [==============================] - 4s 4ms/step - loss: 0.0867 - accuracy: 0.9737\n"
      ]
     }
    ],
    "source": [
     "model = create_model()\n",
     "\n",
-    "with tiledb.open(training_images) as x, tiledb.open(training_labels) as y:\n",
+    "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2})\n",
+    "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    tiledb_dataset = TensorflowTileDBDataset(\n",
     "        x_array=x, y_array=y, x_attrs=['features'], y_attrs=['features'], \n",
-    "        batch_size=64, buffer_bytes=1024**2, shuffle_buffer_size=128\n",
+    "        batch_size=64, shuffle_buffer_size=128\n",
     "    )\n",
     "    model.fit(tiledb_dataset, epochs=5)"
    ]
@@ -361,15 +362,16 @@
      "text": [
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
+      " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      "flatten (Flatten)            (None, 784)               0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 128)               100480    \n",
-      "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 128)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 10)                1290      \n",
+      " flatten (Flatten)           (None, 784)               0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 128)               100480    \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 10)                1290      \n",
+      "                                                                 \n",
       "=================================================================\n",
       "Total params: 101,770\n",
       "Trainable params: 101,770\n",
