--- a/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
@@ -575,8 +575,8 @@
      "text": [
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 99999), tile='64', dtype='int32'),\n",
-      "    Dim(name='dim_1', domain=(0, 2624), tile='2625', dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 99999), tile=64, dtype='int32'),\n",
+      "    Dim(name='dim_1', domain=(0, 2624), tile=2625, dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='float32', var=False, nullable=False),\n",
@@ -586,12 +586,11 @@
       "  capacity=10000,\n",
       "  sparse=True,\n",
       "  allows_duplicates=False,\n",
-      "  coords_filters=FilterList([ZstdFilter(level=-1)]),\n",
       ")\n",
       "\n",
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 99999), tile='64', dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 99999), tile=64, dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='float32', var=False, nullable=False),\n",
@@ -681,18 +680,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3125/3125 [==============================] - 7s 2ms/step - loss: 0.0000e+00 - accuracy: 0.0607\n",
+      "3125/3125 [==============================] - 3s 734us/step - loss: 0.0000e+00 - accuracy: 0.0607\n",
       "Epoch 2/2\n",
-      "3125/3125 [==============================] - 7s 2ms/step - loss: 0.0000e+00 - accuracy: 0.0611\n"
+      "3125/3125 [==============================] - 2s 616us/step - loss: 0.0000e+00 - accuracy: 0.0611\n"
      ]
     }
    ],
    "source": [
     "from tiledb.ml.readers.tensorflow import TensorflowTileDBDataset\n",
     "\n",
-    "with tiledb.open(training_images) as x, tiledb.open(training_labels) as y:\n",
+    "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2, \"py.init_buffer_bytes\": 1024**2})\n",
+    "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    tiledb_dataset = TensorflowTileDBDataset(x_array=x, y_array=y, x_attrs=['features'],\n",
-    "                                             y_attrs=['features'], batch_size=32, buffer_bytes=1024**2)\n",
+    "                                             y_attrs=['features'], batch_size=32)\n",
     "    model = design_model(input_shape=user_movie.shape[1])\n",
     "    model.fit(tiledb_dataset, epochs=2, batch_size=32)"
    ]
