--- a/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
@@ -592,8 +592,8 @@
      "text": [
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 99999), tile='64', dtype='int32'),\n",
-      "    Dim(name='dim_1', domain=(0, 2624), tile='2625', dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 99999), tile=64, dtype='int32'),\n",
+      "    Dim(name='dim_1', domain=(0, 2624), tile=2625, dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='float32', var=False, nullable=False),\n",
@@ -603,12 +603,11 @@
       "  capacity=10000,\n",
       "  sparse=True,\n",
       "  allows_duplicates=False,\n",
-      "  coords_filters=FilterList([ZstdFilter(level=-1)]),\n",
       ")\n",
       "\n",
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 99999), tile='64', dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 99999), tile=64, dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='float32', var=False, nullable=False),\n",
@@ -706,42 +705,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 12.139249\n",
-      "Train Epoch: 1 Batch: 500 Loss: 1.468674\n",
-      "Train Epoch: 1 Batch: 1000 Loss: 0.882950\n",
-      "Train Epoch: 1 Batch: 1500 Loss: 1.023839\n",
-      "Train Epoch: 1 Batch: 2000 Loss: 1.543871\n",
-      "Train Epoch: 1 Batch: 2500 Loss: 1.290439\n",
-      "Train Epoch: 1 Batch: 3000 Loss: 1.506236\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.389335\n",
-      "Train Epoch: 2 Batch: 500 Loss: 1.082205\n",
-      "Train Epoch: 2 Batch: 1000 Loss: 0.798071\n",
-      "Train Epoch: 2 Batch: 1500 Loss: 0.955106\n",
-      "Train Epoch: 2 Batch: 2000 Loss: 1.354398\n",
-      "Train Epoch: 2 Batch: 2500 Loss: 1.213296\n",
-      "Train Epoch: 2 Batch: 3000 Loss: 1.455007\n",
-      "Train Epoch: 3 Batch: 0 Loss: 1.311080\n",
-      "Train Epoch: 3 Batch: 500 Loss: 0.963807\n",
-      "Train Epoch: 3 Batch: 1000 Loss: 0.752557\n",
-      "Train Epoch: 3 Batch: 1500 Loss: 0.916212\n",
-      "Train Epoch: 3 Batch: 2000 Loss: 1.262968\n",
-      "Train Epoch: 3 Batch: 2500 Loss: 1.159866\n",
-      "Train Epoch: 3 Batch: 3000 Loss: 1.420085\n",
-      "Train Epoch: 4 Batch: 0 Loss: 1.266083\n",
-      "Train Epoch: 4 Batch: 500 Loss: 0.915137\n",
-      "Train Epoch: 4 Batch: 1000 Loss: 0.724586\n",
-      "Train Epoch: 4 Batch: 1500 Loss: 0.894152\n",
-      "Train Epoch: 4 Batch: 2000 Loss: 1.211881\n",
-      "Train Epoch: 4 Batch: 2500 Loss: 1.118724\n",
-      "Train Epoch: 4 Batch: 3000 Loss: 1.394083\n"
+      "Train Epoch: 1 Batch: 0 Loss: 11.943394\n",
+      "Train Epoch: 1 Batch: 500 Loss: 1.467998\n",
+      "Train Epoch: 1 Batch: 1000 Loss: 0.881959\n",
+      "Train Epoch: 1 Batch: 1500 Loss: 1.015266\n",
+      "Train Epoch: 1 Batch: 2000 Loss: 1.539459\n",
+      "Train Epoch: 1 Batch: 2500 Loss: 1.285039\n",
+      "Train Epoch: 1 Batch: 3000 Loss: 1.502964\n",
+      "Train Epoch: 2 Batch: 0 Loss: 1.398944\n",
+      "Train Epoch: 2 Batch: 500 Loss: 1.086027\n",
+      "Train Epoch: 2 Batch: 1000 Loss: 0.797786\n",
+      "Train Epoch: 2 Batch: 1500 Loss: 0.949051\n",
+      "Train Epoch: 2 Batch: 2000 Loss: 1.351027\n",
+      "Train Epoch: 2 Batch: 2500 Loss: 1.206539\n",
+      "Train Epoch: 2 Batch: 3000 Loss: 1.452452\n",
+      "Train Epoch: 3 Batch: 0 Loss: 1.320961\n",
+      "Train Epoch: 3 Batch: 500 Loss: 0.968199\n",
+      "Train Epoch: 3 Batch: 1000 Loss: 0.752688\n",
+      "Train Epoch: 3 Batch: 1500 Loss: 0.911840\n",
+      "Train Epoch: 3 Batch: 2000 Loss: 1.260239\n",
+      "Train Epoch: 3 Batch: 2500 Loss: 1.152213\n",
+      "Train Epoch: 3 Batch: 3000 Loss: 1.418210\n",
+      "Train Epoch: 4 Batch: 0 Loss: 1.275772\n",
+      "Train Epoch: 4 Batch: 500 Loss: 0.919216\n",
+      "Train Epoch: 4 Batch: 1000 Loss: 0.724943\n",
+      "Train Epoch: 4 Batch: 1500 Loss: 0.890866\n",
+      "Train Epoch: 4 Batch: 2000 Loss: 1.209634\n",
+      "Train Epoch: 4 Batch: 2500 Loss: 1.110573\n",
+      "Train Epoch: 4 Batch: 3000 Loss: 1.392772\n"
      ]
     }
    ],
    "source": [
     "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader\n",
     "\n",
-    "with tiledb.open(training_images) as x, tiledb.open(training_labels) as y:\n",
-    "    train_loader = PyTorchTileDBDataLoader(x_array=x, y_array=y, batch_size=32, buffer_bytes=1024**2)\n",
+    "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2, \"py.init_buffer_bytes\": 1024**2})\n",
+    "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
+    "    train_loader = PyTorchTileDBDataLoader(x_array=x, y_array=y, batch_size=32, csr=False)\n",
     "\n",
     "    #Number of ratings x (user + movies)\n",
     "    datashape_x = (100000, 2625)\n",
